--- a/Exercices-js-Array_Objects/index.html
+++ b/Exercices-js-Array_Objects/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="lib/jquery.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<div id="tableauImage">
+    <div id="affichagePhoto"></div>
+</div>
 
-<script src="script.js"></script>
+<div id="tableauTexte">
+    <div class="texte" id="affichageNom"></div>
+    <div class="texte" id="affichageAge"></div>
+</div>
+
+<div id="boutons">
+    <button class="bouton" id="boutonPrecedent">Précédent</button>
+    <button class="bouton" id="boutonSuivant">Suivant</button>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="script2.js"></script>
+
 </body>
 </html>
